# django-ninja-jsonapi

./: .coverage  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  release-please-config.json  zensical.toml
.github/workflows/: ci.yml  docs.yml  package.yml  publish.yml  release-please.yml
docs/: _sidebar.md  api-reference.md  api_filtering_example.md  api_limited_methods_example.md  atomic_operations.md  client_generated_id.md  configuration.md  content_negotiation.md  custom_sql_filtering.md  data_layer.md  development.md  django-ninja-jsonapi.md  errors.md  examples.md  fastapi-jsonapi.md  filtering.md  getting-started.md  include_many_to_many.md  include_related_objects.md  index.md  inflection.md  installation.md  limitations.md  logical_data_abstraction.md  minimal_api_example.md  minimal_api_head.md  oauth.md  pagination.md  permission.md  quickstart.md  relationships.md  routing.md  sorting.md  sparse_fieldsets.md  standalone_renderer.md  testing.md  updated_includes_example.md  usage.md  view_dependencies.md
docs/http_snippets/: quickstart__create_customer.json  quickstart__create_user.json  quickstart__update_customer.json  quickstart__update_user.json
examples/: README.md
tests/: conftest.py  settings.py  test_application_builder_smoke.py  test_content_negotiation.py  test_django_orm_query_building.py  test_exception_handler.py  test_inflection.py  test_pagination_standalone.py  test_querystring.py  test_renderer_standalone.py  test_schema_builder.py  test_schema_factory.py  test_setup.py  urls.py
(+86 files in other folders)
